paths to editwizards, still need to fix some

--- a/src/main/webapp/edit/index.jspx
+++ b/src/main/webapp/edit/index.jspx
@@ -32,46 +32,8 @@
 <mm:import id="list">${wizards}/list.jsp</mm:import>
 <mm:import id="wizard">${wizards}/wizard.jsp</mm:import>
 
-<mm:link page="$wizards">
-  <mm:param name="wizard">wizards/pages/pages_home</mm:param>
-  <mm:param name="objectnumber">12345</mm:param>
-  <mm:param name="referrer">wizards/pages/pages_home</mm:param>
-  ${_}
-</mm:link>
-
 
 <h1>Editors</h1>
-<p>Extra text</p>
-<ul>
-  <li>
-    News  
-    <mm:link page="$wizard">
-      <mm:param name="wizard">wizards/TMF/anouncement</mm:param>
-      <mm:param name="nodepath">type,event,dates</mm:param>
-      <mm:param name="constraints">type.type='anouncement'</mm:param>
-      <mm:param name="main">event</mm:param>
-      <mm:param name="orderby">dates.begindate</mm:param>
-      <mm:param name="directions">down</mm:param>
-      <mm:param name="fields">dates.begindate,event.title,event.subtitle,type.type</mm:param>
-      <mm:param name="searchfields">event.title,event.subtitle,type.type</mm:param>
-      <a href="${_}">news</a>
-    </mm:link>
-    <!-- ${ew}/list.jsp?wizard=TMF/anouncement&nodepath=type,event,dates&constraints=type.type='anouncement'&main=event&orderby=dates.begindate&directions=down&fields=dates.begindate,event.title,event.subtitle,type.type&searchfields=event.title,event.subtitle,type.type -->
-  </li>
-  <li>
-  
-    <mm:link page="$list">
-      <mm:param name="wizard">wizards/content</mm:param>
-      <mm:param name="nodepath">content</mm:param>
-      <mm:param name="fields">title</mm:param>
-      <a href="${_}">content</a>
-    </mm:link>
-    
-  </li>
-</ul>
-
-
-
 
 <table width="700">
 <tr>
@@ -93,7 +55,7 @@
   <mm:param name="orderby">event.begindate</mm:param>
   <mm:param name="fields">event.begindate,event.title,event.subtitle,type.type</mm:param>
   <mm:param name="searchfields">event.title,event.subtitle,type.type</mm:param>
-  <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+  <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}" /></a>
 </mm:link>
 
 
@@ -104,11 +66,10 @@
     <td></td>
     <td width="8%" class="link"><!-- <a href="<mm:url referids="referrer,language" page="${ew}/wizard.jsp?wizard=TMF/event2anouncement&objectnumber=38197" />"><img alt="&gt;" src="../mmbase/style/images/next.gif"  /></a> -->
 
-
     <mm:link page="$wizard">
       <mm:param name="wizard">TMF/event2anouncement</mm:param>
       <mm:param name="objectnumber">38197</mm:param>
-      <a href="${_}">pijl</a>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}" /></a>
     </mm:link>    
     
     </td>
@@ -116,7 +77,16 @@
 </tr>
 <tr bgcolor="#F2F2F2">
     <td>Featured</td>
-    <td width="8%" class="link"><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/featured&nodepath=type&constraints=type.type='special'" />"><img alt="&gt;" src="../mmbase/style/images/next.gif"  /></a> --></td>
+    <td width="8%" class="link"><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/featured&nodepath=type&constraints=type.type='special'" />"><img alt="&gt;" src="../mmbase/style/images/next.gif"  /></a> -->
+    
+    <mm:link page="$wizard">
+      <mm:param name="wizard">TMF/featured</mm:param>
+      <mm:param name="nodepath">type</mm:param>
+      <mm:param name="constraints">type='special'</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+        
+    </td>
   <td width="74%"><p>Choose articles, events, movies, works or people for the featured section of the frontpage</p></td>
 </tr>	
 <tr bgcolor="#F2F2F2">			
@@ -144,55 +114,160 @@
 
 <tr>
     <td>Events</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/event&nodepath=event&orderby=number&directions=down&fields=title,subtitle&searchfields=title,subtitle" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" >
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/event</mm:param>
+      <mm:param name="nodepath">event</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">number,title,subtitle</mm:param>
+      <mm:param name="searchfields">title,subtitle</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+    <!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/event&nodepath=event&orderby=number&directions=down&fields=title,subtitle&searchfields=title,subtitle" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
     <td><p>Add and manage Events.</p></td>
 </tr>
 
 <tr>
     <td>Campaigns</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/campaign&nodepath=campaign&orderby=number&directions=down&fields=title,subtitle&searchfields=title,subtitle" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/campaign&nodepath=campaign&orderby=number&directions=down&fields=title,subtitle&searchfields=title,subtitle" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> -->
+    
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/campaign</mm:param>
+      <mm:param name="nodepath">campaign</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">number,title,subtitle</mm:param>
+      <mm:param name="searchfields">title,subtitle</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+
+    </td>
     <td><p>Add and manage campaigns.</p></td>
 </tr>
 
 <tr>
     <td>Person</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="../mmbase/edit/wizard/jsp/list.jsp?wizard=TMF/person&nodepath=person&orderby=sirname&fields=firstname,sirname&searchfields=firstname,sirname" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="../mmbase/edit/wizard/jsp/list.jsp?wizard=TMF/person&nodepath=person&orderby=sirname&fields=firstname,sirname&searchfields=firstname,sirname" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> -->
+
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/person</mm:param>
+      <mm:param name="nodepath">person</mm:param>
+      <mm:param name="orderby">sirname</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">firstname,sirname</mm:param>
+      <mm:param name="searchfields">firstname,sirname</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+    
+    </td>
     <td><p>Create/remove people in the database.</p></td>
 </tr>
 
 <tr>
     <td>Organisation</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/organisation&nodepath=organisation&orderby=number&directions=down&fields=name,subtitle&searchfields=name,subtitle" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/organisation&nodepath=organisation&orderby=number&directions=down&fields=name,subtitle&searchfields=name,subtitle" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> -->
+
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/organisation</mm:param>
+      <mm:param name="nodepath">organisation</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">name,subtitle</mm:param>
+      <mm:param name="searchfields">name,subtitle</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+    
+    </td>
     <td><p>Add, remove or correct organisation information.</p></td>
 </tr>
 
 <tr>
     <td>Types</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/type&nodepath=type&orderby=number&directions=down&fields=type,typeoftype&searchfields=type,typeoftype" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/type&nodepath=type&orderby=number&directions=down&fields=type,typeoftype&searchfields=type,typeoftype" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> -->
+
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/type</mm:param>
+      <mm:param name="nodepath">type</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">type,typeoftype</mm:param>
+      <mm:param name="searchfields">type,typeoftype</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+
+    </td>
     <td><p>Create different object types.</p></td>
 </tr>
 
 <tr>
     <td>Keywords</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/keyword&nodepath=keyword&orderby=number&directions=down&fields=keyword&searchfields=keyword" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/keyword&nodepath=keyword&orderby=number&directions=down&fields=keyword&searchfields=keyword" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> -->
+
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/keyword</mm:param>
+      <mm:param name="nodepath">keyword</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">keyword</mm:param>
+      <mm:param name="searchfields">keyword</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+
+    </td>
     <td><p>Create different keywords.</p></td>
 </tr>
 
 <tr>
     <td>Upload Pictures</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/picture&nodepath=picture&orderby=number&directions=down&fields=title&searchfields=title" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/picture&nodepath=picture&orderby=number&directions=down&fields=title&searchfields=title" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> -->
+
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/picture</mm:param>
+      <mm:param name="nodepath">picture</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">title,handle</mm:param>
+      <mm:param name="searchfields">title</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+    
+    </td>
     <td><p>Add, remove or correct Pictures.</p></td>
 </tr>
 
 <tr>
     <td>Upload Files</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/file&nodepath=file&orderby=number&directions=down&fields=title,filename,mimetype&searchfields=title,filename,mimetype" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/file&nodepath=file&orderby=number&directions=down&fields=title,filename,mimetype&searchfields=title,filename,mimetype" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> -->
+
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/file</mm:param>
+      <mm:param name="nodepath">file</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">title,filename,mimetype</mm:param>
+      <mm:param name="searchfields">title,filename,mimetype</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+    </td>
     <td><p>Add, remove or correct Files.</p></td>
 </tr>
 
 <tr>
     <td>Copyright</td>
-    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/copyright&nodepath=copyright&orderby=number&directions=down&fields=name&searchfields=name" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> --></td>
+    <td class="link" ><!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/copyright&nodepath=copyright&orderby=number&directions=down&fields=name&searchfields=name" />"><img alt="&gt;" src="../mmbase/style/images/next.gif" /></a> -->
+
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/copyright</mm:param>
+      <mm:param name="nodepath">copyright</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">name</mm:param>
+      <mm:param name="searchfields">name</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+        
+    </td>
     <td><p>Add, remove or correct Copyrights.</p></td>
 </tr>
 
@@ -203,7 +278,20 @@
 </tr>
 <tr>
     <td>Connect Media Objects</td>
-    <td class="link"><!-- <a href="/mmbase/edit/wizard/jsp/list.jsp?wizard=TMF/media&amp;nodepath=media&amp;orderby=number&amp;directions=down&amp;fields=title,handle,mtype&amp;searchfields=title,handle&amp;referrer=%2Fedit%2Findex.jsp&amp;language=en"><img alt="&gt;" src="/mmbase/style/images/next.gif"></a> --></td>
+    <td class="link"><!-- <a href="/mmbase/edit/wizard/jsp/list.jsp?wizard=TMF/media&amp;nodepath=media&amp;orderby=number&amp;directions=down&amp;fields=title,handle,mtype&amp;searchfields=title,handle&amp;referrer=%2Fedit%2Findex.jsp&amp;language=en"><img alt="&gt;" src="/mmbase/style/images/next.gif"></a> -->
+
+    <mm:link page="$list">
+      <mm:param name="wizard">TMF/video</mm:param>
+      <mm:param name="nodepath">video</mm:param>
+      <mm:param name="orderby">number</mm:param>
+      <mm:param name="directions">down</mm:param>
+      <mm:param name="fields">title,handle,mtype</mm:param>
+      <mm:param name="searchfields">title,handle,mtype</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+    </mm:link>
+
+
+    </td>
     <td><p>Connect a video to other objects.</p></td> 
 </tr>	
     
