started video editor in jspx to (re)create streams etc

--- a/src/main/webapp/convert/index.jspx
+++ b/src/main/webapp/convert/index.jspx
@@ -58,7 +58,7 @@
         <mm:maxnumber value="${max}" />
         <mm:offset value="${offset}" />
 
-        <ol>
+        <ol start="${offset + 1}">
         <mm:listnodes>
           <li>
             
